--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,7 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 .vsconfig
+Assets/Scenes/SpawnsTurretsWell.unity
+Assets/Scenes/SpawnsTurretsWell.unity
+Assets/Scenes/SpawnsTurretsWell.unity
+Assets/Scenes/SpawnsTurretsWell.unity.meta
